@@ -34,6 +34,7 @@ export("+.section",
        beamToXyzAdv,
        binmapAdp,
        binAverage,
+       binApply,
        bcdToInteger,
        byteToBinary,
        coastlineBest,
